--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,7 @@ animation: fade 4s linear;
   padding: 4px;
   width: calc(100% - 5px);
   background: #e5e5e5;
+  font-size: 0.85rem;
 }
 
 .newsletter form input[type="submit"] {
@@ -152,7 +153,7 @@ animation: fade 4s linear;
   bottom: 0;
   border: 0;
   background: none;
-  font-size: 18px;
+  font-size: 0.85rem;
   padding: 0 20px;
   background: #1332e6;
   color: white;
