--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: conthrax;
   margin: 0;
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
