--- a/css/styles.css
+++ b/css/styles.css
@@ -67,12 +67,12 @@
 }
 
 @font-face {
-  font-family: ConthraxLight;
-  src: url("ConthraxLight.otf")  format("truetype");
+  font-family: ConthraxBook;
+  src: url("ConthraxBook.otf")  format("truetype");
 }
 
 body {
-  font-family: ConthraxLight;
+  font-family: ConthraxBook;
   margin: 0;
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
