--- a/css/styles.css
+++ b/css/styles.css
@@ -185,12 +185,16 @@ hr:not([size]) {
   height: 1px;
 }
 
-h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
+h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1{
   margin-top: 0;
   margin-bottom: 0.5rem;
   /* font-family: "Conthrax Regular", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
   font-weight: 600 !important;
   line-height: 1.2;
+}
+
+p {
+  line-height: 1.5;
 }
 
 
@@ -574,7 +578,7 @@ progress {
 }
 
 .lead {
-  font-size: 1.1rem;
+  font-size: 1.15rem;
   font-weight: 300;
 }
 
