--- a/css/styles.css
+++ b/css/styles.css
@@ -11458,14 +11458,21 @@ section {
 }
 
 #mainNav {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   background-color: white;
 }
 #mainNav .navbar-brand {
   width: 14rem;
   /* font-family: "Kanit", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
 }
+@media (min-width: 576px) {
+  .navbar-brand {
+    width: 8rem;
+  }
+}
+
+
 #mainNav .navbar-brand:hover, #mainNav .navbar-brand:active {
   color: #2937f0;
 }
