--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,37 @@ body {
 
 
 /* Custom code */
+/* (A) FIXED WRAPPER */
+.hwrap {
+  justify-content: center;
+  overflow-x: hidden;
+  height: 2rem;
+  background-color: rgb(242, 242, 242);
+}
+ 
+/* (B) MOVING TICKER WRAPPER */
+.hmove { display: flex; }
+
+/* (C) ITEMS - INTO A LONG HORIZONTAL ROW */
+.hitem {
+  flex-shrink: 0;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 4px;
+  text-align: center;
+}
+ 
+/* (D) ANIMATION - MOVE ITEMS FROM RIGHT TO LEFT */
+/* 4 ITEMS -400%, CHANGE THIS IF YOU ADD/REMOVE ITEMS */
+@keyframes tickerh {
+  0% { transform: translate3d(100%, 0, 0); }
+  100% { transform: translate3d(-400%, 0, 0); }
+}
+.hmove { animation: tickerh linear 30s infinite; }
+.hmove:hover { animation-play-state: paused; }
+
+
+
 iframe {
   max-width: 100% !important;
   width: 1500px;
@@ -211,6 +242,10 @@ hr:not([size]) {
   height: 1px;
 }
 
+/* .featurestext {
+  color: #0071ff;
+} */
+
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1{
   margin-top: 0;
   margin-bottom: 0.5rem;
@@ -235,7 +270,7 @@ p {
 }
 @media (min-width: 1200px) {
   .textresponsive {
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
 }
 
@@ -689,6 +724,7 @@ progress {
 }
 
 .display-6 {
+  /* color: #0071ff; */
   font-size: calc(1.375rem + 1.5vw);
   font-weight: 300;
   line-height: 1.2;
@@ -11482,7 +11518,7 @@ aside {
 }
 
 #mainNav {
-  padding-top: 0.5rem;
+  padding-top: 2.5rem;
   padding-bottom: 0.5rem;
   background-color: white;
 }
