--- a/css/styles.css
+++ b/css/styles.css
@@ -11508,12 +11508,12 @@ aside {
 }
 
 #mainNav {
-  padding-top: 2rem;
+  /* padding-top: 2rem; */
   padding-bottom: 0rem;
   background-color: white;
 }
 #mainNav .navbar-brand {
-  width: 12rem;
+  width: 14rem;
   /* font-family: "Kanit", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
 }
 @media (min-width: 576px) {
