--- a/css/styles.css
+++ b/css/styles.css
@@ -67,9 +67,10 @@
 }
 
 @font-face {
+  /* font-family: 'Montserrat', sans-serif; */
   font-family: ConthraxBook;
   src: url("ConthraxBook.otf")  format("truetype");
-}
+  }
 
 body {
   font-family: ConthraxBook;
@@ -84,6 +85,8 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.Textblue {  color: #0071ff;
+}
 
 /* Custom code */
 /* (A) FIXED WRAPPER */
