--- a/css/styles.css
+++ b/css/styles.css
@@ -67,13 +67,13 @@
 }
 
 @font-face {
-  /* font-family: 'Montserrat', sans-serif; */
-  font-family: ConthraxBook;
-  src: url("ConthraxBook.otf")  format("truetype");
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat',
+    src: url("ConthraxBook.otf")  format("truetype");
   }
 
 body {
-  font-family: ConthraxBook;
+  font-family: Montserrat;
   margin: 0;
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
@@ -132,7 +132,7 @@ iframe {
 
 .sliderimg {
   max-width: 400px;
-  max-height: 550px;
+  max-height: 460px;
 }
 
 .mySlides {display: none;}
@@ -185,6 +185,10 @@ animation: fade 4s linear;
     margin:auto;    
     max-width: 65% !important;
    }
+ }
+
+ .ModelCss {
+  width: 70%;
  }
 
 
