--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,10 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.imgcenter {
+  text-align: center;
+}
+
 .Textblue {  color: #0071ff;
 }
 
@@ -134,6 +138,13 @@ iframe {
   max-width: 400px;
   max-height: 460px;
 }
+
+@media (max-width: 768px) {
+  .sliderimg {
+    max-height: 300px;
+  }
+}
+
 
 .mySlides {display: none;}
 
