--- a/css/styles.css
+++ b/css/styles.css
@@ -67,13 +67,14 @@
 }
 
 @font-face {
-  /* font-family: 'Montserrat', sans-serif; */
-  font-family: 'Montserrat',
-    /* src: url("ConthraxBook.otf")  format("truetype"); */
+  font-family: 'ConthraxBook';
+  /* font-family: 'Montserrat', */
+    src: url("ConthraxBook.otf")  format("truetype");
   }
 
 body {
-  font-family: Montserrat;
+  /* font-family: Montserrat; */
+  font-family: 'ConthraxBook';
   margin: 0;
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
@@ -90,6 +91,11 @@ body {
 }
 
 .Textblue {  color: #0071ff;
+}
+
+.margintop1rem {
+  margin-top: 3rem;
+  margin-bottom: 0rem;
 }
 
 /* Custom code */
@@ -159,7 +165,6 @@ iframe {
 /* Slideshow container */
 .slideshow-container {
   text-align: center;
-  max-width: 500px !important;
   position: relative;
   margin: auto;
 }
@@ -172,10 +177,6 @@ animation: fade 4s linear;
 @keyframes fade {
 0%,100% { opacity: 0 }
 50% { opacity: 1 }
-}
-
-.margintop1rem {
-  margin-top: 1rem;
 }
 
 
@@ -251,6 +252,15 @@ animation: fade 4s linear;
   border-color: #0049fff2;
 }
 
+.Subfont {
+  font-size: 0.9rem;
+  padding-top: 0.2rem;
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+  line-height: 1.2;
+
+}
+
 
 /* Custom code ends here*/
 
@@ -272,8 +282,8 @@ hr:not([size]) {
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1{
   margin-top: 0;
-  margin-bottom: 0.5rem;
-  /* font-family: "Conthrax Regular", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
+  margin-bottom: 1rem;
+  font-family: "ConthraxBook", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 600 !important;
   line-height: 1.2;
 }
@@ -290,11 +300,21 @@ p {
 
 .textresponsive {
   font-size: calc(0.6rem + 0.8vw);
-  line-height: 1.7;
+  line-height: 1.5;
 }
 @media (min-width: 1200px) {
   .textresponsive {
-    font-size: 1.1rem;
+    font-size: 1.05rem;
+  }
+}
+
+.textresponsive2 {
+  font-size: calc(0.6rem + 0.8vw);
+  line-height: 1.5;
+}
+@media (min-width: 1200px) {
+  .textresponsive2 {
+    font-size: 1.05rem;
   }
 }
 
@@ -322,7 +342,7 @@ h3, .h3 {
 }
 @media (min-width: 1200px) {
   h3, .h3 {
-    font-size: 1.75rem;
+    font-size: 1.7rem;
   }
 }
 
@@ -755,7 +775,7 @@ progress {
 }
 @media (min-width: 1200px) {
   .display-6 {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 }
 
@@ -6741,7 +6761,7 @@ textarea.form-control-lg {
 }
 
 .fixed-top {
-  position: fixed;
+  /* position: fixed; */
   top: 0;
   right: 0;
   left: 0;
@@ -7591,7 +7611,7 @@ textarea.form-control-lg {
 }
 
 .mb-4 {
-  margin-bottom: 2.5rem !important;
+  margin-bottom: 1rem !important;
 }
 
 .mb-5 {
@@ -11538,7 +11558,12 @@ section {
 
 aside {
   padding-top: 3rem;
-  padding-bottom: 1rem;
+  padding-bottom: 3rem;
+}
+
+.Textfeatures {
+  margin-bottom: 4rem !important;
+  text-align: center;
 }
 
 .app-badge {
@@ -11773,7 +11798,7 @@ footer a:hover, footer a:active, footer a:focus {
 
 .masthead {
   background-color: transparent;
-  padding-top: 7.5rem;
+  padding-top: 3rem;
   padding-bottom: 3rem;
 }  
 
