--- a/css/styles.css
+++ b/css/styles.css
@@ -7624,6 +7624,11 @@ textarea.form-control-lg {
   margin-bottom: 1rem !important;
 }
 
+.mb-custom {
+  margin-top: 2rem !important;
+  margin-bottom: 0.5rem !important;
+}
+
 .mb-5 {
   margin-bottom: 1rem !important;
 }
