--- a/css/styles.css
+++ b/css/styles.css
@@ -291,17 +291,22 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1{
   margin-bottom: 0.5rem;
   font-family: "ConthraxBook", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 600 !important;
-  line-height: 1.2;
+  line-height: 1;
 }
 
 p {
   font-size: calc(0.6rem + 0.8vw);
-  line-height: 1.6;
+  line-height: 1.2;
 }
 @media (min-width: 1200px) {
   p, .p {
     font-size: 1rem;
   }
+}
+
+p {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
 }
 
 .textresponsive {
