--- a/css/styles.css
+++ b/css/styles.css
@@ -93,12 +93,6 @@ body {
 .Textblue {  color: #0071ff;
 }
 
-.margintop1rem {
-  font-weight: 300 !important;
-  margin-top: 3rem;
-}
-
-
 /* Custom code */
 /* (A) FIXED WRAPPER */
 .hwrap {
@@ -288,7 +282,7 @@ hr:not([size]) {
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1{
   margin-top: 0;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1.5rem;
   font-family: "ConthraxBook", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 600 !important;
   line-height: 1;
@@ -779,14 +773,14 @@ progress {
 }
 
 .display-6 {
-  /* color: #0071ff; */
+  color: #0071ff;
   font-size: calc(1.375rem + 1.5vw);
   font-weight: 300;
   line-height: 1.2;
 }
 @media (min-width: 1200px) {
   .display-6 {
-    font-size: 2rem;
+    font-size: 2.3rem;
   }
 }
 
@@ -7634,7 +7628,7 @@ textarea.form-control-lg {
 }
 
 .mb-5 {
-  margin-bottom: 1rem !important;
+  margin-bottom: 1.5rem !important;
 }
 
 .mb-auto {
@@ -9286,7 +9280,7 @@ textarea.form-control-lg {
   }
 
   .mb-md-0 {
-    margin-bottom: 3rem !important;
+    margin-bottom: 5rem !important;
   }
 
   .mb-md-1 {
@@ -11567,21 +11561,21 @@ html {
 }
 
 section {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 .sectionfeatures{
-  padding-top: 3rem;
+  padding-top: 5rem;
   padding-bottom: 0rem;
 }
 
 aside {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .Textfeatures {
-  margin-bottom: 4rem !important;
+  margin-bottom: 5rem !important;
   text-align: center;
 }
 
@@ -11590,12 +11584,12 @@ aside {
 }
 
 #mainNav {
-  /* padding-top: 2rem; */
+  padding-top: 2rem;
   padding-bottom: 0rem;
   background-color: white;
 }
 #mainNav .navbar-brand {
-  width: 11rem;
+  width: 12rem;
   /* font-family: "Kanit", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
 }
 @media (min-width: 576px) {
@@ -11817,8 +11811,8 @@ footer a:hover, footer a:active, footer a:focus {
 
 .masthead {
   background-color: transparent;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }  
 
 .masthead .masthead-device-mockup {
