--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ body {
 
 .textlanding {
   color: #515151;
-  font-size: calc(1rem + 0.5vw);
+  font-size: calc(0.8rem + 0.5vw);
   line-height: 1.5;
 }
 
@@ -298,15 +298,14 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1{
   margin-bottom: 2rem;
   font-family: 'Montserrat';
   font-weight: 600 !important;
-  line-height: 1.1 !important;
+  line-height: 1.2 !important;
 }
 
 p {
   color: #515151;
   margin-top: 0 !important;
   margin-bottom: 0 !important;
-  font-weight: 600 !important;
-  font-size: calc(1rem + 0.2vw);
+  font-size: calc(0.8rem + 0.2vw);
   line-height: 1.5;
 }
 @media (min-width: 1200px) {
@@ -335,7 +334,7 @@ h2, .h2 {
 
 h3, .h3 {
   margin-bottom: 0.5rem !important;
-  font-size: calc(1.3rem + 0.5vw);
+  font-size: calc(1.2rem + 0.4vw);
   /* font-size: 24px; */
   color: #0071ff;
 }
@@ -775,7 +774,7 @@ progress {
 
 .display-5 {
   color: #0071ff;
-  font-size: calc(2rem + 1.2vw);
+  font-size: calc(1.5rem + 0.5vw);
   line-height: 1.2;
 }
 @media (min-width: 1200px) {
@@ -3283,7 +3282,7 @@ textarea.form-control-lg {
 
 .btn-primary {
   margin-top: 2rem;
-  font-size: calc(1rem + 0.5vw);
+  font-size: calc(0.8rem + 0.5vw);
   font-weight: 600;
   color: #fff;
   background-color: #0071ff;
@@ -3301,7 +3300,7 @@ textarea.form-control-lg {
 }
 
 .btn-primary1 {
-  font-size: calc(1rem + 0.5vw);
+  font-size: calc(0.8rem + 0.5vw);
   font-weight: 600;
   color: #fff;
   background-color: #0071ff;
@@ -7647,7 +7646,7 @@ textarea.form-control-lg {
 }
 
 .mb-2 {
-  margin-bottom: 0.5rem !important;
+  margin-bottom: 2rem !important;
 }
 
 .mb-3 {
@@ -11615,21 +11614,31 @@ html {
   text-align: right;
 }
 
+.Video {
+  width: 70%;
+  height: 100% 
+}
+
 @media (max-width: 991px) {
   .vidsection {
     text-align: center;
+    margin-bottom: 3rem;
+  }
+  .Video {
+    width: 100%;
+    height: 100% 
   }
 }
 
 section {
   background-color: #f8f9fa;
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 .sectionfeatures{
   background-color: #f8f9fa;
-  padding-top: 6rem;
-  padding-bottom: 5rem;
+  padding-top: 5rem;
+  padding-bottom: 4rem;
 }
 
 aside {
@@ -11646,17 +11655,18 @@ aside {
 }
 
 #mainNav {
-  padding-top: 2rem;
+  padding-top: 1rem;
   padding-bottom: 0rem;
   background-color: #f8f9fa;
 }
+
 #mainNav .navbar-brand {
   width: 12.5rem;
   /* font-family: "Kanit", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
 }
-@media (min-width: 576px) {
-  .navbar-brand {
-    width: 8rem;
+@media (max-width: 576px) {
+  #mainNav .navbar-brand {
+    width: 10rem;
   }
 }
 
@@ -11873,8 +11883,8 @@ footer a:hover, footer a:active, footer a:focus {
 
 .masthead {
   background-color: #f8f9fa;
-  padding-top: 2rem;
-  padding-bottom: 6rem;
+  padding-top: 3rem;
+  padding-bottom: 4rem;
 }  
 
 .masthead .masthead-device-mockup {
