--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,18 @@ body {
   }
 }
 
+.imgmodel {
+  width: 85%;
+}
+
+@media (max-width: 911px) {
+  .imgmodel {
+    width: 100%;
+  }
+}
+
+
+
 
 /* Custom code */
 /* (A) FIXED WRAPPER */
@@ -295,7 +307,7 @@ hr:not([size]) {
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1{
   margin-top: 0;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   font-family: 'Montserrat';
   font-weight: 600 !important;
   line-height: 1.2 !important;
@@ -332,15 +344,29 @@ h2, .h2 {
   }
 } */
 
+.imgSus {
+  border-radius: 5px;
+}
+
+.textsolution {
+  font-size: 1rem;
+  color: #a8a8a8;
+  margin-bottom: -0.3rem !important;
+}
+
+.h2custom {
+  margin-bottom: 2rem !important;
+}
+
 h3, .h3 {
-  margin-bottom: 0.5rem !important;
-  font-size: calc(1.2rem + 0.4vw);
+  margin-bottom: 0.3rem !important;
+  font-size: calc(1rem + 0.4vw);
   /* font-size: 24px; */
   color: #0071ff;
 }
 @media (min-width: 1200px) {
   h3, .h3 {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
   }
 } 
 
@@ -708,8 +734,14 @@ progress {
 }
 
 .featureitem {
-  margin: 1rem 0rem 1rem 0rem;
+  margin: 1rem 4.5rem 1rem 4.5rem;
 }
+@media (max-width: 991px) {
+  .featureitem {
+    margin: 1rem 0rem 1rem 0rem;
+  }
+}
+
 /* 
 @media (max-width: 768px) {
   .featureitemproduct {
@@ -774,7 +806,7 @@ progress {
 
 .display-5 {
   color: #0071ff;
-  font-size: calc(1.5rem + 0.5vw);
+  font-size: calc(1.8rem + 0.5vw);
   line-height: 1.2;
 }
 @media (min-width: 1200px) {
@@ -3281,7 +3313,7 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  margin-top: 2rem;
+  margin-top: 1rem;
   font-size: calc(0.8rem + 0.5vw);
   font-weight: 600;
   color: #fff;
@@ -11607,7 +11639,7 @@ html {
 .sectionbtn1 {
   background-color: #f8f9fa;
   padding-top: 0rem;
-  padding-bottom: 4remrem;
+  padding-bottom: 4rem;
 }
 
 .vidsection {
@@ -11632,13 +11664,13 @@ html {
 
 section {
   background-color: #f8f9fa;
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-top: 6rem;
+  padding-bottom: 6rem;
 }
 .sectionfeatures{
   background-color: #f8f9fa;
-  padding-top: 5rem;
-  padding-bottom: 4rem;
+  padding-top: 6rem;
+  padding-bottom: 5rem;
 }
 
 aside {
@@ -11655,7 +11687,7 @@ aside {
 }
 
 #mainNav {
-  padding-top: 1rem;
+  padding-top: 1.5rem;
   padding-bottom: 0rem;
   background-color: #f8f9fa;
 }
@@ -11883,9 +11915,15 @@ footer a:hover, footer a:active, footer a:focus {
 
 .masthead {
   background-color: #f8f9fa;
-  padding-top: 3rem;
-  padding-bottom: 4rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }  
+
+@media (max-width: 991px) {
+.masthead {
+  padding-top: 3rem;
+  padding-bottom: 0rem;
+}  }
 
 .masthead .masthead-device-mockup {
   display: flex;
