--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@
   }
 
 body {
-  background-color: #f8f9fa;
+  background-color: #ffffff;
   font-family: 'Montserrat';
   margin: 0;
   font-size: var(--bs-body-font-size);
@@ -11639,13 +11639,13 @@ html {
 .sectionbtn {
   /* background-image: url("assets/backgroundgraynew.png") !important;
   background-color: rgb(242, 242, 242); */
-  background-color: #f8f9fa;
+  background-color: white;
   padding-top: 0rem;
   padding-bottom: 0rem;
 }
 
 .sectionbtn1 {
-  background-color: #f8f9fa;
+  background-color: white;
   padding-top: 0rem;
   padding-bottom: 4rem;
 }
@@ -11671,12 +11671,12 @@ html {
 }
 
 section {
-  background-color: #f8f9fa;
+  background-color: white;
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
 .sectionfeatures{
-  background-color: #f8f9fa;
+  background-color: white;
   padding-top: 6rem;
   padding-bottom: 5rem;
 }
@@ -11697,7 +11697,7 @@ aside {
 #mainNav {
   padding-top: 1.5rem;
   padding-bottom: 0rem;
-  background-color: #f8f9fa;
+  background-color: white;
 }
 
 #mainNav .navbar-brand {
@@ -11917,7 +11917,7 @@ footer a:hover, footer a:active, footer a:focus {
 }
 
 .masthead {
-  background-color: #f8f9fa;
+  background-color: white;
   padding-top: 1rem;
   padding-bottom: 1rem;
 }  
